# quizzard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: email.rs  input.rs  numbers.rs  pagination.rs  select_enum.rs  selects.rs
quizzard_derive/: Cargo.toml
quizzard_derive/src/: lib.rs
src/: lib.rs
src/questions/: email.rs  input.rs  integer.rs  mod.rs  multiselect.rs  select.rs  text.rs
