[package]
name = "quizzard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
num-traits = "0.2.16"
quizzard_derive = { path = "./quizzard_derive" }
thiserror = "1.0.49"
email_address = { version = "0.2.4", default-features = false, optional = true }

[features]
email = ["dep:email_address"]
